# BrickBreaker

./: .gitignore  CMakeLists.txt  README.md  data.c  data.h  game.c  game.h  help.c  help.h  history.c  history.h  main.c  menu.c  menu.h  menu_help.c  menu_help.h  menu_settings.c  menu_settings.h  settings.c  settings.h  utils.c  utils.h
.github/workflows/: c-cpp.yml  ci.yml
